{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 86,
  "lineage": "3ae7b988-bc9e-95a6-7aea-55da3d9472ca",
  "resources": [
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DatabaseSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:security-group/sg-0a0040dc0bc37e42f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0040dc0bc37e42f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20241122194410237200000004",
            "name_prefix": "terraform-",
            "owner_id": "021891584638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "w19-DatabaseSg"
            },
            "tags_all": {
              "Name": "w19-DatabaseSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.PubSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ServerSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:security-group/sg-07d220085cecbb971",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d220085cecbb971",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "application",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ServerSg",
            "name_prefix": "",
            "owner_id": "021891584638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "w19-ServerSg"
            },
            "tags_all": {
              "Name": "w19-ServerSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:loadbalancer/app/w19-lb/3b90faa9402a71c3",
            "arn_suffix": "app/w19-lb/3b90faa9402a71c3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "w19-lb-907848257.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:loadbalancer/app/w19-lb/3b90faa9402a71c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "w19-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07d220085cecbb971"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03952d6bcde6936d6"
              },
              {
                "subnet_id": "subnet-0d47da0138631b1f2"
              }
            ],
            "subnets": [
              "subnet-03952d6bcde6936d6",
              "subnet-0d47da0138631b1f2"
            ],
            "tags": {
              "Environment": "Production",
              "Name": "w19-lb"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "w19-lb"
            },
            "vpc_id": "vpc-0fb3d1254d040072e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.SecurityGroup.aws_security_group.ServerSg",
            "module.networking.aws_subnet.PubSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:listener/app/w19-lb/3b90faa9402a71c3/14f1bbe14174fd8c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:targetgroup/w19-TargetGroup/64da7b4a8967bba4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:listener/app/w19-lb/3b90faa9402a71c3/14f1bbe14174fd8c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:loadbalancer/app/w19-lb/3b90faa9402a71c3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SecurityGroup.aws_security_group.ServerSg",
            "module.loadbalancer.aws_lb.LB",
            "module.loadbalancer.aws_lb_target_group.TargetGroup",
            "module.networking.aws_subnet.PubSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:targetgroup/w19-TargetGroup/64da7b4a8967bba4",
            "arn_suffix": "targetgroup/w19-TargetGroup/64da7b4a8967bba4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:021891584638:targetgroup/w19-TargetGroup/64da7b4a8967bba4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:021891584638:loadbalancer/app/w19-lb/3b90faa9402a71c3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "w19-TargetGroup",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "w19-TargetGroup"
            },
            "tags_all": {
              "Name": "w19-TargetGroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:internet-gateway/igw-052b073bacd3045a2",
            "id": "igw-052b073bacd3045a2",
            "owner_id": "021891584638",
            "tags": {
              "Name": "w19-igw"
            },
            "tags_all": {
              "Name": "w19-igw"
            },
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubRoutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:route-table/rtb-04947399ded964a35",
            "id": "rtb-04947399ded964a35",
            "owner_id": "021891584638",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052b073bacd3045a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "w19-PubRoutetable"
            },
            "tags_all": {
              "Name": "w19-PubRoutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PvtRoutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:route-table/rtb-0dcc65cee37bf103c",
            "id": "rtb-0dcc65cee37bf103c",
            "owner_id": "021891584638",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "w19-PvtRoutetable"
            },
            "tags_all": {
              "Name": "w19-PvtRoutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubSubnetAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddc6f98fd17285d0",
            "route_table_id": "rtb-04947399ded964a35",
            "subnet_id": "subnet-03952d6bcde6936d6"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.PubRoutetable",
            "module.networking.aws_subnet.PubSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098cf7b1b20c145e2",
            "route_table_id": "rtb-04947399ded964a35",
            "subnet_id": "subnet-0d47da0138631b1f2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.PubRoutetable",
            "module.networking.aws_subnet.PubSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PvtSubnetAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d6770c2e075ca1",
            "route_table_id": "rtb-0dcc65cee37bf103c",
            "subnet_id": "subnet-01cf04d8c736b3271"
          },
          "dependencies": [
            "module.networking.aws_route_table.PvtRoutetable",
            "module.networking.aws_subnet.PvtSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e018827a304b8fd",
            "route_table_id": "rtb-0dcc65cee37bf103c",
            "subnet_id": "subnet-0095ed0e6605b6ae5"
          },
          "dependencies": [
            "module.networking.aws_route_table.PvtRoutetable",
            "module.networking.aws_subnet.PvtSubnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubSubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:subnet/subnet-03952d6bcde6936d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03952d6bcde6936d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891584638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "w19-PubSubnet1"
            },
            "tags_all": {
              "Name": "w19-PubSubnet1"
            },
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:subnet/subnet-0d47da0138631b1f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d47da0138631b1f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891584638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "w19-PubSubnet2"
            },
            "tags_all": {
              "Name": "w19-PubSubnet2"
            },
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PvtSubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:subnet/subnet-01cf04d8c736b3271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf04d8c736b3271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891584638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "w19-PvtSubnet1"
            },
            "tags_all": {
              "Name": "w19-PvtSubnet1"
            },
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:subnet/subnet-0095ed0e6605b6ae5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0095ed0e6605b6ae5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891584638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "w19-PvtSubnet2"
            },
            "tags_all": {
              "Name": "w19-PvtSubnet2"
            },
            "vpc_id": "vpc-0fb3d1254d040072e"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891584638:vpc/vpc-0fb3d1254d040072e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010bc40df35b7fad5",
            "default_route_table_id": "rtb-03653697e2651f34f",
            "default_security_group_id": "sg-048ef94d221e2d053",
            "dhcp_options_id": "dopt-0a81aa7e970a2eb95",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb3d1254d040072e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03653697e2651f34f",
            "owner_id": "021891584638",
            "tags": {
              "Name": "w19-vpc"
            },
            "tags_all": {
              "Name": "w19-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}